; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-scene.c_crop_equal.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-scene.c_crop_equal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_sceneitem_crop = type { i64, i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.obs_sceneitem_crop*, %struct.obs_sceneitem_crop*)* @crop_equal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @crop_equal(%struct.obs_sceneitem_crop* %0, %struct.obs_sceneitem_crop* %1) #0 {
  %3 = alloca %struct.obs_sceneitem_crop*, align 8
  %4 = alloca %struct.obs_sceneitem_crop*, align 8
  store %struct.obs_sceneitem_crop* %0, %struct.obs_sceneitem_crop** %3, align 8
  store %struct.obs_sceneitem_crop* %1, %struct.obs_sceneitem_crop** %4, align 8
  %5 = load %struct.obs_sceneitem_crop*, %struct.obs_sceneitem_crop** %3, align 8
  %6 = getelementptr inbounds %struct.obs_sceneitem_crop, %struct.obs_sceneitem_crop* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load %struct.obs_sceneitem_crop*, %struct.obs_sceneitem_crop** %4, align 8
  %9 = getelementptr inbounds %struct.obs_sceneitem_crop, %struct.obs_sceneitem_crop* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp eq i64 %7, %10
  br i1 %11, label %12, label %36

12:                                               ; preds = %2
  %13 = load %struct.obs_sceneitem_crop*, %struct.obs_sceneitem_crop** %3, align 8
  %14 = getelementptr inbounds %struct.obs_sceneitem_crop, %struct.obs_sceneitem_crop* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = load %struct.obs_sceneitem_crop*, %struct.obs_sceneitem_crop** %4, align 8
  %17 = getelementptr inbounds %struct.obs_sceneitem_crop, %struct.obs_sceneitem_crop* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = icmp eq i64 %15, %18
  br i1 %19, label %20, label %36

20:                                               ; preds = %12
  %21 = load %struct.obs_sceneitem_crop*, %struct.obs_sceneitem_crop** %3, align 8
  %22 = getelementptr inbounds %struct.obs_sceneitem_crop, %struct.obs_sceneitem_crop* %21, i32 0, i32 2
  %23 = load i64, i64* %22, align 8
  %24 = load %struct.obs_sceneitem_crop*, %struct.obs_sceneitem_crop** %4, align 8
  %25 = getelementptr inbounds %struct.obs_sceneitem_crop, %struct.obs_sceneitem_crop* %24, i32 0, i32 2
  %26 = load i64, i64* %25, align 8
  %27 = icmp eq i64 %23, %26
  br i1 %27, label %28, label %36

28:                                               ; preds = %20
  %29 = load %struct.obs_sceneitem_crop*, %struct.obs_sceneitem_crop** %3, align 8
  %30 = getelementptr inbounds %struct.obs_sceneitem_crop, %struct.obs_sceneitem_crop* %29, i32 0, i32 3
  %31 = load i64, i64* %30, align 8
  %32 = load %struct.obs_sceneitem_crop*, %struct.obs_sceneitem_crop** %4, align 8
  %33 = getelementptr inbounds %struct.obs_sceneitem_crop, %struct.obs_sceneitem_crop* %32, i32 0, i32 3
  %34 = load i64, i64* %33, align 8
  %35 = icmp eq i64 %31, %34
  br label %36

36:                                               ; preds = %28, %20, %12, %2
  %37 = phi i1 [ false, %20 ], [ false, %12 ], [ false, %2 ], [ %35, %28 ]
  %38 = zext i1 %37 to i32
  ret i32 %38
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
